--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   <description>legit-check-portal</description>
   <properties>
     <java.version>11</java.version>
+    <liquibase.propertyFile>${project.basedir}/liquibase/liquibase.properties</liquibase.propertyFile>
+    <changelog-file>${project.basedir}/liquibase/legit-check-changelog.xml</changelog-file>
   </properties>
   <dependencies>
     <dependency>
@@ -22,10 +24,10 @@
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-security</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -55,6 +57,10 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -71,6 +77,30 @@
           </excludes>
         </configuration>
       </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.liquibase</groupId>-->
+<!--        <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--        <version>3.8.0</version>-->
+<!--        <configuration>-->
+<!--          <propertyFile>${liquibase.propertyFile}</propertyFile>-->
+<!--        </configuration>-->
+<!--        <dependencies>-->
+<!--          <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--          </dependency>-->
+<!--          <dependency>-->
+<!--            <groupId>org.hibernate</groupId>-->
+<!--            <artifactId>hibernate-core</artifactId>-->
+<!--          </dependency>-->
+<!--          <dependency>-->
+<!--            <groupId>javax.xml.bind</groupId>-->
+<!--            <artifactId>jaxb-api</artifactId>-->
+<!--            <version>2.4.0-b180830.0359</version>-->
+<!--          </dependency>-->
+<!--        </dependencies>-->
+<!--      </plugin>-->
+
     </plugins>
   </build>
 
