--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+spring.liquibase.change-log=classpath:legit-check-changelog.xml
+spring.datasource.username=sa
+spring.datasource.password=
