--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
+      <version>4.13.0</version>
     </dependency>
   </dependencies>
 
@@ -78,29 +79,6 @@
           </excludes>
         </configuration>
       </plugin>
-<!--      <plugin>-->
-<!--        <groupId>org.liquibase</groupId>-->
-<!--        <artifactId>liquibase-maven-plugin</artifactId>-->
-<!--        <version>3.8.0</version>-->
-<!--        <configuration>-->
-<!--          <propertyFile>${liquibase.propertyFile}</propertyFile>-->
-<!--        </configuration>-->
-<!--        <dependencies>-->
-<!--          <dependency>-->
-<!--            <groupId>com.h2database</groupId>-->
-<!--            <artifactId>h2</artifactId>-->
-<!--          </dependency>-->
-<!--          <dependency>-->
-<!--            <groupId>org.hibernate</groupId>-->
-<!--            <artifactId>hibernate-core</artifactId>-->
-<!--          </dependency>-->
-<!--          <dependency>-->
-<!--            <groupId>javax.xml.bind</groupId>-->
-<!--            <artifactId>jaxb-api</artifactId>-->
-<!--            <version>2.4.0-b180830.0359</version>-->
-<!--          </dependency>-->
-<!--        </dependencies>-->
-<!--      </plugin>-->
 
     </plugins>
   </build>
