--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
+      <version>4.15.0</version>
     </dependency>
   </dependencies>
 
