Added SecurityConfiguration for auth-server. Move application properties to dev profile properties

--- a/auth-server/pom.xml
+++ b/auth-server/pom.xml
@@ -16,4 +16,16 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <spring.profiles.active>dev</spring.profiles.active>
+      </properties>
+    </profile>
+  </profiles>
+
 </project>
