Simple proof of concept. Need to figure out how exactly should i configure new endpoint: from application.properties or KeyCloakConfiguration

--- a/web-api/src/main/resources/application.properties
+++ b/web-api/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:legit-check-webapi-changelog.xml
 spring.datasource.username=sa
 spring.datasource.password=
+keycloak.realm=SpringBootKeycloak
+keycloak.auth-server-url=http://localhost:8180/
+keycloak.ssl-required=external
+keycloak.resource=legit-check-app
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings = true
+keycloak.credentials.secret=${client_secret}
+
+keycloak.securityConstraints[0].authRoles[0] = customer
+keycloak.securityConstraints[0].securityCollections[0].patterns[0] = /items
