--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -16,4 +16,12 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.keycloak</groupId>
+      <artifactId>keycloak-spring-boot-starter</artifactId>
+      <version>20.0.3</version>
+    </dependency>
+  </dependencies>
+
 </project>
